fix cropped highlight markers

--- a/src/Detail.css
+++ b/src/Detail.css
@@ -1,15 +1,4 @@
-.highlight circle {
-    cursor: pointer;
-    r: 4pt;
-    fill: lightblue;
-    transition: r 200ms
-}
-
-.highlight circle:hover {
-    r: 6pt;
-}
-
-.highlight .label {
+.detail .label {
     background: white;
     display: inline-block;
     width: 200px;
@@ -20,7 +9,7 @@
     border-radius: 2px;
 }
 
-.label-title {
+.detail .label-title {
     font-weight: bold;
 }
 
